First commited as before_58184_rev1